[package]
name = "keyval-serv"
version = "0.1.0"
edition = "2021"


[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
